--- a/bz-extension/manifest.json
+++ b/bz-extension/manifest.json
@@ -3,8 +3,8 @@
   "name": "Boozang AI",
   "short_name": "Boozang AI",
   "description": "Boozang test automation is powered by AI. Tests can be recorded or written in clear text.",
-  "version": "3.8.33",
-  "permissions": ["webRequest", "tabs","management","storage","*://*/*","<all_urls>"],
+  "version": "3.8.42",
+  "permissions": ["webRequest", "management","storage","*://*/*","<all_urls>"],
   "background": {
     "scripts": ["background"]
   },
